# AmadeusGPT

./: .gitignore  Makefile  README.md  pyproject.toml
amadeusgpt/: __init__.py  app.py  integration_module_hub.py
amadeusgpt/analysis_objects/: llm.py
amadeusgpt/configs/: EPM_template.yaml  Horse_template.yaml  MABe_template.yaml  MausHaus_template.yaml
amadeusgpt/system_prompts/: visual_llm.py
amadeusgpt/utils/: __init__.py  api_key_util.py  embedding_adapter.py  openai_adapter.py
notebooks/: Horse_demo_openrouter.ipynb  MABe_demo_openrouter.ipynb
tests/: test_3d.py  test_project_creation.py  test_superanimal.py
