[build-system]
requires = ["setuptools==79.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AmadeusGPT"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "cachetools>=6.1.0",
    "cebra>=0.4.0",
    "gitingest>=0.3.1",
    "h5py>=3.14.0",
    "ipympl>=0.9.7",
    "jupyter>=1.1.1",
    "matplotlib<3.9",
    "openai>=1.0",
    "opencv-python-headless>=4.11.0.86",
    "pyyaml>=6.0.2",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.26.0",
    "streamlit-drawable-canvas==0.9.2",
    "tables>=3.10.1",
    "umap-learn>=0.5.9.post2",
]

[tool.setuptools]
packages = ["amadeusgpt"]

[tool.setuptools.dynamic]
dependencies = {file = ["setup.cfg"]}

[tool.codespell]
skip = '.git,*.pdf,*.svg,go.sum,*.css,*.txt'
check-hidden = true
# ignore-regex = ''
ignore-words-list = 'mabe,missings,nd,tread'
